fixed issues in sdks and misalignments for developer review version
